INICIO DEL REPOSITORIO

--- a/code/cmi-web/web/index.xhtml
+++ b/code/cmi-web/web/index.xhtml
@@ -5,11 +5,21 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
         Hello from Facelets
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <br />
+        <h:link outcome="/pages/objetivo/List" value="Show All Objetivo Items"/>
+        <br />
+        <h:link outcome="/pages/objetivo/objetivo/List" value="Show All Objetivo Items"/>
+        <br />
+        <h:link outcome="/pages/objetivo/objetivo/List" value="Show All Objetivo Items"/>
     </h:body>
+
+
+
 </html>
 
