--- a/code/cmi-web/web/index.xhtml
+++ b/code/cmi-web/web/index.xhtml
@@ -1,24 +1,39 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-        <br />
-        <h:link outcome="/pages/objetivo/List" value="Show All Objetivo Items"/>
-        <br />
-        <h:link outcome="/pages/objetivo/objetivo/List" value="Show All Objetivo Items"/>
-        <br />
-        <h:link outcome="/pages/objetivo/objetivo/List" value="Show All Objetivo Items"/>
-    </h:body>
 
+
+    <h:head>
+        <meta content='text/html; charset=UTF-8' http-equiv="Content-Type" />
+        <title>CMI</title>
+        <link rel="stylesheet" href="/resources/css/bootstrap.min.css" />
+        <h:outputStylesheet library="css" name="jsfcrud.css" />
+    </h:head>
+
+    <h:body>
+        <div class="col-xs-12 cuadro" style="text-align: center;">
+            <div class="row" >
+                <div class="col-xs-12 cuadro" style="height: 50px;">
+                    <h2>SISTEMA CUADRO DE MANDO INTEGRAL</h2>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 cuadro" style="border: #269abc solid thin;">                    
+                    <ui:include src="template/menu.xhtml" />
+                </div>
+            </div>
+
+           
+        </div>
+
+
+    </h:body>
 
 
 </html>
